@@ -29,6 +29,9 @@ webkitgtk (2.3.1-1) UNRELEASED; urgency=low
   * debian/patches/40_hppa_platform_h.patch:
     + WTF_CPU_HPPA was already being defined, so only define the missing
       remaining bits.
+    + Don't disable YARR, JIT and MacroAssembler here, this is a more general
+      problem as explained in https://bugs.webkit.org/show_bug.cgi?id=113638
+      and we already disable those in debian/rules.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 30 Oct 2013 00:49:46 +0100
 
